Use RootMeta to extract YangModuleInfo
This is a more straightforward way of getting the same instance.

Change-Id: I29769e9f5df31f81098f67876d3e95b5efdf1850
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>